# iproute-rs

./: .gitignore  .licenserc.yaml  .rustfmt.toml  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: clippy-rustfmt.yml  main.yml
src/: color.rs  error.rs  lib.rs  mac.rs  result.rs
src/ip/: main.rs
src/ip/address/: cli.rs  mod.rs  show.rs
src/ip/address/tests/: address.rs  mod.rs
src/ip/link/: add.rs  cli.rs  detail.rs  flags.rs  link_details.rs  link_info.rs  mod.rs  show.rs
src/ip/link/ifaces/: bond.rs  bridge.rs  hsr.rs  iptun.rs  mod.rs  netkit.rs  parse.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs
src/ip/link/tests/: bond.rs  bridge.rs  color.rs  dummy.rs  hsr.rs  ip6tnl.rs  ipip.rs  link.rs  loopback.rs  mod.rs  netkit.rs  nlmon.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs
src/ip/neighbour/: cli.rs  mod.rs  show.rs
src/ip/neighbour/tests/: mod.rs  neighbour.rs
src/ip/tests/: cmd.rs  mod.rs  netns.rs  path.rs
